# QGIS

./: CMakeLists.txt  INSTALL.md
.docker/: docker-qgis-build-qt-for-python.sh  docker-qgis-build.sh  qgis3-build-deps-qt-for-python-fedora.dockerfile  qgis3-build-deps-qt-for-python.dockerfile  qgis3-qt6-build-deps.dockerfile
.github/workflows/: qt-for-python.yml  qt6.yml
cmake/: FindPySide2.cmake  PySide2ModuleBuild.cmake
python/core/: core.sip
python/core/auto_generated/: qgis.sip.in  qgsapplication.sip.in  qgsmaprenderercache.sip.in  qgsvectorfilewriter.sip.in
python/core/auto_generated/auth/: qgsauthmethod.sip.in
python/core/auto_generated/mesh/: qgsmeshcalculator.sip.in  qgsmeshdataprovider.sip.in
python/core/auto_generated/raster/: qgsrasterprojector.sip.in
python/core/auto_generated/textrenderer/: qgstextrenderer.sip.in
python/core/auto_generated/vector/: qgsvectorlayer.sip.in
qt-for-python/: CMakeLists.txt  qgis_core_global.h  typesystem_qgis_core.xml
qt-for-python/PyQt/PyQt5/: QtCore.py
qt-for-python/core/: CMakeLists.txt  __init__.py  __init__.py.cmake  qgis_core_global.h  qgis_core_global.h.in  typesystem_qgis_core.xml  typesystem_qgis_core.xml.in
qt-for-python/qgis/: CMakeLists.txt  qgis_core_global.h  qgis_core_global.h.in  typesystem_qgis_core.xml  typesystem_qgis_core.xml.in
scripts/: sipify.pl
src/app/: main.cpp
src/core/: CMakeLists.txt  qgis.h  qgsabstractcontentcache.h  qgsapplication.cpp  qgsapplication.h  qgsbrowsermodel.h  qgscolorramp.cpp  qgscoordinatereferencesystem.cpp  qgscoordinatereferencesystem.h  qgscoordinatetransform.h  qgscoordinatetransform_p.h  qgscoordinatetransformcontext.h  qgsdataitem.h  qgsdatumtransform.h  qgsfeaturefiltermodel.h  qgsfeaturerequest.h  qgslegendrenderer.h  qgslegendsettings.h  qgsmaplayer.h  qgsmaplayerproxymodel.h  qgsmaprenderercache.h  qgsmaprendererjob.h  qgsmapsettings.h  qgsmaptopixel.h  qgsogcutils.cpp  qgsopenclutils.h  qgspostgresstringutils.cpp  qgsprovidermetadata.h  qgsproviderregistry.h  qgsruntimeprofiler.h  qgssnappingconfig.h  qgsspatialindex.h  qgsstringutils.cpp  qgsvectorfilewriter.cpp  qgsvectorfilewriter.h
src/core/annotations/: qgsannotation.h
src/core/auth/: qgsauthmanager.cpp  qgsauthmanager.h  qgsauthmethod.h
src/core/callouts/: qgscallout.h
src/core/classification/: qgsclassificationjenks.h
src/core/dxf/: qgsdxfexport.h
src/core/editform/: qgsattributeeditorrelation.h  qgseditformconfig.h
src/core/expression/: qgsexpression.cpp  qgsexpressionfunction.cpp
src/core/geometry/: qgsgeometry.h
src/core/labeling/: qgslabelingenginesettings.h  qgslabelsearchtree.h  qgslabelsink.h  qgspallabeling.cpp  qgspallabeling.h
src/core/layertree/: qgslayertreemodellegendnode.h  qgslayertreeregistrybridge.h
src/core/layout/: qgslayoutitem.h  qgslayoutitemmap.h  qgslayoutitemmapgrid.h  qgslayoutitemscalebar.h  qgslayoutpagecollection.h  qgslayoutrendercontext.h  qgslayoutreportcontext.h  qgslayouttable.h  qgslayouttablecolumn.h
src/core/locator/: qgslocator.h
src/core/mesh/: qgsmeshcalculator.h  qgsmeshdataprovider.h  qgstriangularmesh.h
src/core/network/: qgsfiledownloader.cpp  qgsnetworkaccessmanager.h
src/core/processing/: qgsprocessingalgorithm.h  qgsprocessingutils.h
src/core/project/: qgsproject.h  qgsprojectstorage.h
src/core/providers/gdal/: qgsgdalprovider.cpp  qgsgdalprovider.h
src/core/providers/ogr/: qgsogrprovider.cpp  qgsogrprovider.h
src/core/raster/: qgsbilinearrasterresampler.h  qgscubicrasterresampler.h  qgsrasterfilewriter.h  qgsrasterfilewritertask.h  qgsrasterinterface.h  qgsrasterlayer.cpp  qgsrasterlayer.h  qgsrasterprojector.h  qgsrasterresampler.h
src/core/scalebar/: qgsnumericscalebarrenderer.h  qgsscalebarrenderer.h  qgsscalebarsettings.h
src/core/symbology/: qgscategorizedsymbolrenderer.h  qgsellipsesymbollayer.cpp  qgsellipsesymbollayer.h  qgsgraduatedsymbolrenderer.h  qgslinesymbollayer.h  qgsmarkersymbollayer.cpp  qgsrendererrange.h  qgssvgcache.h  qgssymbol.h
src/core/textrenderer/: qgstextrenderer.h
src/core/vector/: qgsvectordataprovider.h  qgsvectorlayer.cpp  qgsvectorlayer.h  qgsvectorlayereditutils.h  qgsvectorlayerjoininfo.h
src/providers/postgres/: qgspostgresprovider.cpp
src/providers/wcs/: qgswcsprovider.cpp  qgswcsprovider.h
src/server/services/wms/: qgswmsparameters.cpp
tests/bench/: main.cpp
tests/src/: CMakeLists.txt
